--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ ul {
 fa-arrow-right{
  color:white;
  font-weight: normal;
- font-size: 12px;
+ font-size: 20px;
 }
 
 nav {
@@ -93,6 +93,7 @@ nav {
     color: black;
     font-family: Helvetica, sans-serif;
     background-color: white;
+    /* background-color: gray; */
     border-radius: 15px;
 }
 
@@ -148,7 +149,8 @@ max-width: 850px;
     padding: 23px 15px;
     border: none;
     border-radius: 10px;
-    background-color:rgb(63, 153, 156);
+    /* background-color:rgb(63, 153, 156); */
+    background-color: gray;
     font-size: 18px;
     margin-right: 40px;
 
